Final \__int removals
We have enough 'open ended' int expression usage that we do need
\int_eval:w I think. That allows us to reduce the number of
\@@_int_eval:w cases to those which are *really* needed (FPU).

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2115,7 +2115,7 @@
     \tex_edef:D \l_@@_line_part_tl { \if_false: } \fi:
     #1
     \exp_after:wN \@@_wrap_line_loop:w
-    \int_value:w \__int_eval:w
+    \int_value:w \int_eval:w
   }
 \cs_new:Npn \@@_wrap_line_loop:w #1 ; #2#3#4#5#6#7#8#9
   {
@@ -2124,7 +2124,7 @@
     \fi:
     #2 #3 #4 #5 #6 #7 #8 #9
     \exp_after:wN \@@_wrap_line_loop:w
-    \int_value:w \__int_eval:w #1 - 8 ;
+    \int_value:w \int_eval:w #1 - 8 ;
   }
 \cs_new:Npn \@@_wrap_line_aux:Nw #1#2#3 \exp_after:wN #4 ;
   {
@@ -2148,7 +2148,7 @@
 \cs_new:Npn \@@_wrap_line_end:NnnnnnnnN #1#2#3#4#5#6#7#8#9
   {
     #2 #3 #4 #5 #6 #7 #8
-    \use_none:nnnnn \__int_eval:w 8 - ; #9
+    \use_none:nnnnn \int_eval:w 8 - ; #9
     \token_if_eq_charcode:NNTF \c_space_token #9
       { \@@_wrap_line_end:nw { } }
       { \if_false: { \fi: } \@@_wrap_break:w #9 }
@@ -2160,7 +2160,7 @@
     \@@_wrap_next_line:w
   }
 \cs_new:Npn \@@_wrap_end_chunk:w
-    #1 \__int_eval:w #2 - #3 ; #4#5 \q_stop
+    #1 \int_eval:w #2 - #3 ; #4#5 \q_stop
   {
     \if_false: { \fi: }
     \exp_args:Nf \@@_wrap_next:nw { \int_eval:n { #2 - #4 } }
