--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -92,6 +92,17 @@
 %   \end{texnote}
 % \end{function}
 %
+% \begin{function}[EXP, added = 2018-03-30]{\int_eval:w}
+%   \begin{syntax}
+%     \cs{int_eval:w} \Arg{integer expression}
+%   \end{syntax}
+%   Evaluates the \meta{integer expression} as described for
+%   \cs{int_eval:n}. The end of the expression is the first token
+%   encountered that cannot form part of such an expression. In particular,
+%   spaces do \emph{not} terminate the expression but \cs{scan_stop}:
+%   does.
+% \end{function}
+%
 % \begin{function}[EXP, updated = 2012-09-26]{\int_abs:n}
 %   \begin{syntax}
 %     \cs{int_abs:n} \Arg{integer expression}
@@ -932,41 +943,6 @@
 %   \end{texnote}
 % \end{function}
 %
-% \section{Internal functions}
-%
-% \begin{function}[EXP]{\__int_to_roman:w}
-%   \begin{syntax}
-%     \cs{__int_to_roman:w} \meta{integer}
-%     \cs{__int_to_roman:w} \meta{integer denotation} \meta{optional space}
-%   \end{syntax}
-%   Converts an \meta{integer} to lower case Roman representation.  The
-%   \meta{integer} is found as in \cs{int_value:w} by expanding what
-%   follows exhaustively.  One (optional) space is lost if the
-%   \meta{integer} is given by explicit digits.  Note that this function
-%   produces a string of letters with category code~$12$. Negative
-%   \meta{integer} values result in no output, although the function
-%   does not terminate expansion until a suitable endpoint is found in
-%   the same way as for positive numbers.
-%   \begin{texnote}
-%     This is the \TeX{} primitive \tn{romannumeral} renamed.
-%   \end{texnote}
-% \end{function}
-%
-% \begin{function}[EXP]{\__int_eval:w, \__int_eval_end:}
-%   \begin{syntax}
-%     \cs{__int_eval:w} \meta{intexpr} \cs{__int_eval_end:}
-%   \end{syntax}
-%   Evaluates \meta{integer expression} as described for \cs{int_eval:n}.
-%   The evaluation stops when an unexpandable token which is not a valid
-%   part of an integer is read or when \cs{__int_eval_end:} is
-%   reached. The latter is gobbled by the scanner mechanism:
-%   \cs{__int_eval_end:} itself is unexpandable but used correctly
-%   the entire construct is expandable.
-%   \begin{texnote}
-%     This is the \eTeX{} primitive \tn{numexpr}.
-%   \end{texnote}
-% \end{function}
-%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -1020,6 +996,7 @@
 % \subsection{Integer expressions}
 %
 % \begin{macro}{\int_eval:n}
+% \begin{macro}{\int_eval:w}
 %   Wrapper for \cs{@@_eval:w}: can be used in an integer expression
 %   or directly in the input stream.
 %   When debugging, use parentheses to catch early termination.
@@ -1028,7 +1005,9 @@
   { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \int_eval:n } }
 \cs_new:Npn \int_eval:n #1
   { \int_value:w \@@_eval:w #1 \@@_eval_end: }
+\cs_new:Npn \int_eval:w { \int_value:w \@@_eval:w }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\int_abs:n}
