--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -856,15 +856,6 @@
 %<@@=str>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_int_eval:w}
-%   Access to primitive: there are a few uses where we cannot grab the
-%   expression as an argument, so need the \texttt{w} signature. Other cases
-%   are retained (no using \cs{int_eval:n}) as there is a performance gain.
-%    \begin{macrocode}
-\cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
-%    \end{macrocode}
-% \end{macro}
-%
 % \subsection{Creating and setting string variables}
 %
 % \begin{macro}
@@ -1470,7 +1461,7 @@
 \cs_new:Npn \@@_item:nn #1#2
   {
     \exp_after:wN \@@_item:w
-    \int_value:w \@@_int_eval:w #2 \exp_after:wN ;
+    \int_value:w \int_eval:w #2 \exp_after:wN ;
     \int_value:w \@@_count:n {#1} ;
     #1 \q_stop
   }
@@ -1483,7 +1474,7 @@
           {
             \exp_after:wN \use_i_delimit_by_q_stop:nw
             \exp:w \exp_after:wN \@@_skip_exp_end:w
-              \int_value:w \@@_int_eval:w #1 + #2 ;
+              \int_value:w \int_eval:n { #1 + #2 } ;
           }
       }
       {
@@ -1522,12 +1513,12 @@
       \exp_after:wN \@@_skip_loop:wNNNNNNNN
     \else:
       \exp_after:wN \@@_skip_end:w
-      \int_value:w \@@_int_eval:w
+      \int_value:w \int_eval:w
     \fi:
     #1 ;
   }
 \cs_new:Npn \@@_skip_loop:wNNNNNNNN #1; #2#3#4#5#6#7#8#9
-  { \exp_after:wN \@@_skip_exp_end:w \int_value:w \@@_int_eval:w #1 - 8 ; }
+  { \exp_after:wN \@@_skip_exp_end:w \int_value:w \int_eval:n { #1 - 8 } ; }
 \cs_new:Npn \@@_skip_end:w #1 ;
   {
     \exp_after:wN \@@_skip_end:NNNNNNNN
@@ -1569,8 +1560,8 @@
   {
     \exp_after:wN \@@_range:w
     \int_value:w \@@_count:n {#1} \exp_after:wN ;
-    \int_value:w \@@_int_eval:w #2 - 1 \exp_after:wN ;
-    \int_value:w \@@_int_eval:w #3 ;
+    \int_value:w \int_eval:n { #2 - 1 } \exp_after:wN ;
+    \int_value:w \int_eval:n {#3} ;
     #1 \q_stop
   }
 \cs_new:Npn \@@_range:w #1; #2; #3;
@@ -1582,7 +1573,7 @@
 \cs_new:Npn \@@_range:nnw #1#2
   {
     \exp_after:wN \@@_collect_delimit_by_q_stop:w
-    \int_value:w \@@_int_eval:w #2 - #1 \exp_after:wN ;
+    \int_value:w \int_eval:n { #2 - #1 } \exp_after:wN ;
     \exp:w \@@_skip_exp_end:w #1 ;
   }
 %    \end{macrocode}
@@ -1648,7 +1639,7 @@
 \cs_new:Npn \@@_collect_loop:wnNNNNNNN #1; #2 #3#4#5#6#7#8#9
   {
     \exp_after:wN \@@_collect_loop:wn
-    \int_value:w \@@_int_eval:w #1 - 7 ;
+    \int_value:w \int_eval:n { #1 - 7 } ;
     { #2 #3#4#5#6#7#8#9 }
   }
 \cs_new:Npn \@@_collect_end:wn #1 ;
