--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -333,9 +333,9 @@
     \if_int_compare:w #1 = 0 \exp_stop_f:
       \exp_after:wN \prg_break:
     \fi:
-    \exp_not:N \__seq_item:n { \__int_value:w \tex_dimen:D #1 }
+    \exp_not:N \__seq_item:n { \int_value:w \tex_dimen:D #1 }
     \exp_after:wN \tree_extract_loop:w
-      \__int_value:w \__int_eval:w #1 - 1 ;
+      \int_value:w \int_eval:n { #1 - 1 } ;
   }
 %    \end{macrocode}
 % \end{macro}
@@ -371,7 +371,7 @@
     \tex_setbox:D \l_tree_left_box  \tex_box:D \c_empty_box
     \tex_setbox:D \l_tree_right_box \tex_box:D \c_empty_box
     \tex_setbox:D \l_tree_item_box
-      \tex_vbox:D to \__int_eval:w #3 \__int_eval_end: \c_one_sp_dim {#4}
+      \tex_vbox:D to \int_eval:n {#3} \c_one_sp_dim {#4}
     \exp_after:wN #1 \exp_after:wN #2
       \if_tree_empty:N #2
       \else:
@@ -446,8 +446,8 @@
     \tex_setbox:D \l_tree_second_box  \tex_lastbox:D
     \cs:w
       tree_splay
-      _\__int_value:w \l_tree_parent_dim
-      _\__int_value:w \l_tree_grandpa_dim
+      _\int_value:w \l_tree_parent_dim
+      _\int_value:w \l_tree_grandpa_dim
       :
     \cs_end:
   }
