--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -348,7 +348,7 @@
   }
 \cs_new:Npn \@@_strip_escape_aux:N #1 { \c_zero }
 \cs_new:Npn \@@_strip_escape_aux:w #1#2
-  { - \__int_value:w #1 \c_zero }
+  { - \int_value:w #1 \c_zero }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -503,7 +503,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_token_to_charcode:N
   {
-    \__int_value:w
+    \int_value:w
       \exp_after:wN \@@_token_to_charcode_auxi:w
       \token_to_meaning:N
   }
