--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -934,7 +934,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \int_mul_truncate:nn #1 #2
   {
-    \__int_value:w
+    \int_value:w
       \__dim_eval:n
         { #2 \__dim_eval:n { \int_eval:n {#1} sp } }
   }
