Move \__chk_if_free_cs:N to kernel-reserved
This one really is 'just for us'.

--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -164,7 +164,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_reg:nNnN #1#2#3#4
   {
-    \__chk_if_free_cs:N #4
+    \__kernel_chk_if_free_cs:N #4
     \int_compare:nNnTF { \int_use:c { g_@@_ #1 _int } } < {#3}
       {
         \int_gincr:c { g_@@_ #1 _int }
