--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1162,7 +1162,7 @@
 %<*package>
 \cs_new_protected:Npn \int_new:N #1
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \cs:w newcount \cs_end: #1
   }
 %</package>
@@ -1199,7 +1199,7 @@
             \tex_global:D
           }
           {
-            \__chk_if_free_cs:N #1
+            \__kernel_chk_if_free_cs:N #1
             \tex_global:D \@@_constdef:Nw
           }
       }
