--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1106,7 +1106,7 @@
 %<*package>
 \cs_new_protected:Npn \dim_new:N #1
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \cs:w newdimen \cs_end: #1
   }
 %</package>
@@ -1814,7 +1814,7 @@
 %<*package>
 \cs_new_protected:Npn \skip_new:N #1
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \cs:w newskip \cs_end: #1
   }
 %</package>
@@ -2102,7 +2102,7 @@
 %<*package>
 \cs_new_protected:Npn \muskip_new:N #1
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \cs:w newmuskip \cs_end: #1
   }
 %</package>
