--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1617,12 +1617,12 @@
 %   \emph{work} with \cs{cs_new_eq:NN} but that's not really a great idea to
 %   show off: we want people to stick to the defined interfaces and that
 %   includes us.) So that these few odd names go into the log when appropriate
-%   there is a need to hand-apply the \cs{__chk_if_free_cs:N} check.
+%   there is a need to hand-apply the \cs{__kernel_chk_if_free_cs:N} check.
 %    \begin{macrocode}
 \group_begin:
-  \__chk_if_free_cs:N \c_group_begin_token
+  \__kernel_chk_if_free_cs:N \c_group_begin_token
   \tex_global:D \tex_let:D \c_group_begin_token {
-  \__chk_if_free_cs:N \c_group_end_token
+  \__kernel_chk_if_free_cs:N \c_group_end_token
   \tex_global:D \tex_let:D \c_group_end_token }
   \char_set_catcode_math_toggle:N \*
   \cs_new_eq:NN \c_math_toggle_token *
@@ -1632,7 +1632,7 @@
   \cs_new_eq:NN \c_math_superscript_token ^
   \char_set_catcode_math_subscript:N \*
   \cs_new_eq:NN \c_math_subscript_token *
-  \__chk_if_free_cs:N \c_space_token
+  \__kernel_chk_if_free_cs:N \c_space_token
   \use:n { \tex_global:D \tex_let:D \c_space_token = ~ } ~
   \cs_new_eq:NN \c_catcode_letter_token a
   \cs_new_eq:NN \c_catcode_other_token 1
