--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -356,7 +356,7 @@
             \int_compare:nNnT \l_trace_internal_int > \c_zero
               {
                 \group_begin:
-                  \cs_set_eq:NN \__chk_if_free_cs:N \use_none:n
+                  \cs_set_eq:NN \__kernel_chk_if_free_cs:N \use_none:n
                   \cs_set_eq:NN \chk_if_free_msg:nn \use_none:nn
                   \file_if_exist:nTF { \l_keys_key_tl -trace.sty }
                     { \RequirePackage { \l_keys_key_tl -trace } }
