--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2075,7 +2075,7 @@
 \__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN c #1 } { }
 \cs_new_protected:Npn \bool_const:Nn #1#2
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \tex_global:D \tex_chardef:D #1 = \bool_if_p:n {#2}
   }
 \cs_generate_variant:Nn \bool_const:Nn { c }
