--- a/l3kernel/l3prop.dtx
+++ b/l3kernel/l3prop.dtx
@@ -561,7 +561,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \prop_new:N #1
   {
-    \__chk_if_free_cs:N #1
+    \__kernel_chk_if_free_cs:N #1
     \cs_gset_eq:NN #1 \c_empty_prop
   }
 \cs_generate_variant:Nn \prop_new:N { c }
