One entirely misplaced function ...
.. should have been @@ from the start!

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -737,13 +737,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\__chk_if_free_msg:nn}
+% \begin{macro}{\@@_chk_if_free:nn}
 %   This auxiliary is similar to \cs{__kernel_chk_if_free_cs:N}, and is used when
 %   defining messages with \cs{msg_new:nnnn}.
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { }
   { \__kernel_debug_log:x { Defining~message~ #1 / #2 ~\msg_line_context: } }
-\cs_new_protected:Npn \__chk_if_free_msg:nn #1#2
+\cs_new_protected:Npn \@@_if_free:nn #1#2
   {
     \msg_if_exist:nnT {#1} {#2}
       {
@@ -762,7 +762,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \msg_new:nnnn #1#2
   {
-    \__chk_if_free_msg:nn {#1} {#2}
+    \@@_if_free:nn {#1} {#2}
     \msg_gset:nnnn {#1} {#2}
   }
 \cs_new_protected:Npn \msg_new:nnn #1#2#3
