Remove \__dim_eval:n
There were a couple of tricky cases here, at least in part due to the
lack of a set of interfaces for \kern.

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1870,8 +1870,8 @@
   }
 \cs_new:Npn \@@_parshape_set_indents:nn #1#2
   {
-    \__dim_eval:n { \l_galley_total_left_margin_dim + #1 }
-    \__dim_eval:n { \l_galley_text_width_dim - ( #1 + #2 ) }
+    \dim_eval:n { \l_galley_total_left_margin_dim + #1 } \exp_stop_f:
+    \dim_eval:n { \l_galley_text_width_dim - ( #1 + #2 ) } \exp_stop_f:
   }
 %    \end{macrocode}
 %   Calculating cutouts is by far the most complex operation here. The
