--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1473,8 +1473,8 @@
         \hbox_set:Nn #1
           {
             \resizebox *
-              { \__dim_eval:n {#2} }
-              { \__dim_eval:n {#3} }
+              { \dim_eval:n {#2} }
+              { \dim_eval:n {#3} }
               { \box_use:N #1 }
           }
       }
@@ -1482,7 +1482,7 @@
       {
         \hbox_set:Nn #1
           {
-            \resizebox * { ! } { \__dim_eval:n {#2} }
+            \resizebox * { ! } { \dim_eval:n {#2} }
               { \box_use:N #1 }
           }
       }
@@ -1490,7 +1490,7 @@
       {
         \hbox_set:Nn #1
           {
-            \resizebox * { \__dim_eval:n {#2} } { ! }
+            \resizebox * { \dim_eval:n {#2} } { ! }
               { \box_use:N #1 }
           }
       }
