--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1159,9 +1159,9 @@
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D - \__dim_eval:n {#2}
+        \tex_kern:D - \@@_dim_eval:n {#2}
         \box_use:N #1
-        \tex_kern:D - \__dim_eval:n {#4}
+        \tex_kern:D - \@@_dim_eval:n {#4}
       }
 %    \end{macrocode}
 %   For the height and depth, there is a need to watch the baseline is
@@ -1225,9 +1225,9 @@
   {
     \hbox_set:Nn \l_@@_internal_box
       {
-        \tex_kern:D - \__dim_eval:n {#2}
+        \tex_kern:D - \@@_dim_eval:n {#2}
         \box_use:N #1
-        \tex_kern:D \__dim_eval:n { #4 - \box_wd:N #1 }
+        \tex_kern:D \@@_dim_eval:n { #4 - \box_wd:N #1 }
       }
     \dim_compare:nNnTF {#3} < \c_zero_dim
       {
@@ -1236,7 +1236,7 @@
             \box_move_down:nn \c_zero_dim
               { \box_use:N \l_@@_internal_box }
           }
-        \box_set_dp:Nn \l_@@_internal_box { - \__dim_eval:n {#3} }
+        \box_set_dp:Nn \l_@@_internal_box { - \@@_dim_eval:n {#3} }
       }
       {
         \hbox_set:Nn \l_@@_internal_box
@@ -1260,7 +1260,7 @@
       {
         \hbox_set:Nn \l_@@_internal_box
           {
-            \box_move_up:nn { - \__dim_eval:n {#5} }
+            \box_move_up:nn { - \@@_dim_eval:n {#5} }
               { \box_use:N \l_@@_internal_box }
           }
         \box_set_ht:Nn \l_@@_internal_box \c_zero_dim
@@ -1309,6 +1309,21 @@
 %    \begin{macrocode}
 %<@@=coffin>
 %    \end{macrocode}
+%
+% \begin{macro}{\@@_dim_eval:w}
+% \begin{macro}{\@@_dim_eval:n}
+%   Evaluating a dimension expression expandably. The only
+%   difference with \cs{dim_eval:n} is the lack of \cs{dim_use:N}, to
+%   produce an internal dimension rather than expand it into characters.
+%    \begin{macrocode}
+\cs_new_eq:NN \@@_dim_eval:w \etex_dimexpr:D
+\__kernel_patch_args:nNNpn
+  { { \__kernel_chk_expr:nNnN {#1} \@@_dim_eval:w { } \@@_dim_eval:n } }
+\cs_new:Npn \@@_dim_eval:n #1
+  { \@@_dim_eval:w #1 \scan_stop: }
+%   \end{macrocode}
+% \end{macro}
+% \end{macro}
 %
 % \subsubsection{Rotating coffins}
 %
@@ -1400,7 +1415,7 @@
     \hbox_set:Nn \l_@@_internal_box
       {
         \tex_kern:D
-          \__dim_eval:n
+          \@@_dim_eval:n
             { \l_@@_bounding_shift_dim - \l_@@_left_corner_dim }
         \box_move_down:nn { \l_@@_bottom_corner_dim }
           { \box_use:N #1 }
