--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -66,12 +66,13 @@
 % \subsection{Access to primitives}
 %
 % \begin{macro}
-%   {\@@_int_eval:w,\@@_int_eval_end:, \@@_int_to_roman:w}
+%   {\@@_dim_eval:w, \@@_int_eval:w, \@@_int_eval_end:, \@@_int_to_roman:w}
 %   Largely for performance reasons, we need to directly access primitives
 %   rather than use \cs{int_eval:n}. This happens \emph{a lot}, so we
 %   use private names. The same is true for \tn{romannumeral}, although it
 %   is used much less widely.
 %    \begin{macrocode}
+\cs_new_eq:NN \@@_dim_eval:w \etex_dimexpr:D
 \cs_new_eq:NN \@@_int_eval:w \etex_numexpr:D
 \cs_new_eq:NN \@@_int_eval_end: \scan_stop:
 \cs_new_eq:NN \@@_int_to_roman:w \tex_romannumeral:D
