--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1042,33 +1042,6 @@
 %   \end{texnote}
 % \end{function}
 %
-% \section{Internal functions}
-%
-% \begin{function}[EXP]{\__dim_eval:w, \__dim_eval_end:}
-%   \begin{syntax}
-%     \cs{__dim_eval:w} \meta{dimexpr} \cs{__dim_eval_end:}
-%   \end{syntax}
-%   Evaluates \meta{dimension expression} as described for \cs{dim_eval:n}.
-%   The evaluation stops when an unexpandable token which is not a valid
-%   part of a dimension is read or when \cs{__dim_eval_end:} is
-%   reached. The latter is gobbled by the scanner mechanism:
-%   \cs{__dim_eval_end:} itself is unexpandable but used correctly
-%   the entire construct is expandable.
-%   \begin{texnote}
-%     This is the \eTeX{} primitive \tn{dimexpr}.
-%   \end{texnote}
-% \end{function}
-%
-% \begin{function}[EXP]{\__dim_eval:n}
-%   \begin{syntax}
-%     \cs{__dim_eval:n} \Arg{dimexpr}
-%   \end{syntax}
-%   By default this expands to \cs{__dim_eval:w} \meta{dimexpr}
-%   \cs{__dim_eval_end:} but when debugging is enabled this expands to a
-%   more complicated construction that evaluates \meta{dimexpr} with
-%   parentheses and within a brace group to detect early termination.
-% \end{function}
-%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -1656,18 +1629,6 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_eval:n}
-%   Evaluating a dimension expression expandably.  This is for use in
-%   other modules, to avoid having to patch many commands.  The only
-%   difference with \cs{dim_eval:n} is the lack of \cs{dim_use:N}, to
-%   produce an internal dimension rather than expand it into characters.
-%    \begin{macrocode}
-\__kernel_patch_args:nNNpn
-  { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \@@_eval:n } }
-\cs_new:Npn \@@_eval:n #1 { \@@_eval:w #1 \@@_eval_end: }
-%    \end{macrocode}
-% \end{macro}
-%
 % \begin{macro}{\dim_use:N, \dim_use:c}
 %   Accessing a \meta{dim}.
 %    \begin{macrocode}
@@ -1711,7 +1672,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\dim_to_decimal_in_bp:n}
-%   Conversion to big points is done using a scaling inside \cs{__dim_eval:w}
+%   Conversion to big points is done using a scaling inside \cs{@@_eval:w}
 %   as \eTeX{} does that using $64$-bit precision. Here, $800/803$ is the
 %   integer fraction for $72/72.27$. This is a common case so is hand-coded
 %   for accuracy (and speed).
