--- a/l3experimental/xcoffins/xcoffins.dtx
+++ b/l3experimental/xcoffins/xcoffins.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: xcoffins.dtx Copyright(C) 2010-2012,2014,2016,2017 The LaTeX3 Project
+%% File: xcoffins.dtx Copyright(C) 2010-2012,2014,2016-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -890,13 +890,13 @@
 %   sign, \emph{etc.}
 %    \begin{macrocode}
 \NewDocumentCommand \CoffinDepth { m }
-  { \coffin_dp:N #1 }
+  { \dim_eval:n { \coffin_dp:N #1 } }
 \NewDocumentCommand \CoffinHeight { m }
-  { \coffin_ht:N #1 }
+  { \dim_eval:n { \coffin_ht:N #1 } }
 \NewDocumentCommand \CoffinTotalHeight { m }
-  { \__dim_eval:n { \coffin_ht:N #1 + \coffin_dp:N #1 } }
+  { \dim_eval:n { \coffin_ht:N #1 + \coffin_dp:N #1 } }
 \NewDocumentCommand \CoffinWidth { m }
-  { \coffin_wd:N #1 }
+  { \dim_eval:n { \coffin_wd:N #1 } }
 %    \end{macrocode}
 % \end{macro}
 %
