Use deprecation system for \__prg_break: etc.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2115,14 +2115,15 @@
 %
 % \begin{macro}{\__kernel_patch_deprecation:nnNNpn}
 % \begin{macro}{\@@_deprecation_aux:nnNnn}
-%   Grab a definition (at present, must be \cs{cs_new_protected:Npn}).
+%   Grab a definition (at present, must be \cs{cs_new_protected:Npn} or \cs{cs_new:Npn}).
 %   Add to \cs{g_@@_deprecation_on_tl} some code that makes the
 %   defined macro |#3| outer (and defines it as an error).  Add to
 %   \cs{g_@@_deprecation_off_tl} the definition itself.  In both
 %   cases we undefine the token with \cs{tex_let:D} to avoid taking a
 %   potentially outer macro as the argument of some \pkg{expl3}
-%   function.  Finally define the macro itself to produce a warning then
-%   redefine and call itself.  The macro initially takes no parameters:
+%   function.  Finally, define the macro itself: if it is protected,
+%   make it produce a warning then redefine and call itself.  The macro
+%   initially takes no parameters:
 %   together with the \texttt{x}-expanding assignment and \cs{exp_not:n}
 %   this gives a convenient way of storing the macro's definition in
 %   itself in order to only produce the warning once for each macro.
@@ -2134,11 +2135,18 @@
     \cs_set_protected:Npn \__kernel_patch_deprecation:nnNNpn #1#2#3#4#5#
       {
         \if_meaning:w \cs_new_protected:Npn #3
+          \exp_after:wN \use_i:nn
         \else:
-          \__kernel_msg_error:nnx { kernel } { debug-unpatchable }
-            { \token_to_str:N #3 ~(for~deprecation) }
+          \if_meaning:w \cs_new:Npn #3
+            \exp_after:wN \exp_after:wN \exp_after:wN \use_ii:nn
+          \else:
+            \__kernel_msg_error:nnx { kernel } { debug-unpatchable }
+              { \token_to_str:N #3 ~(for~deprecation) }
+            \exp_after:wN \exp_after:wN \exp_after:wN \use_none:nn
+          \fi:
         \fi:
-        \@@_deprecation_aux:nnNnn {#1} {#2} #4 {#5}
+        { \@@_deprecation_aux:nnNnn {#1} {#2} #4 {#5} }
+        { \@@_deprecation_expandable:nnNnn {#1} {#2} #4 {#5} }
       }
     \cs_set_protected:Npn \@@_deprecation_aux:nnNnn #1#2#3#4#5
       {
@@ -2160,6 +2168,20 @@
             \exp_not:n { \cs_gset_protected:Npn #3 #4 {#5} }
             \exp_not:N #3
           }
+      }
+    \cs_set_protected:Npn \@@_deprecation_expandable:nnNnn #1#2#3#4#5
+      {
+        \tl_gput_right:Nn \g_@@_deprecation_on_tl
+          {
+            \tex_let:D #3 \scan_stop:
+            \__deprecation_error:Nnn #3 {#2} {#1}
+          }
+        \tl_gput_right:Nn \g_@@_deprecation_off_tl
+          {
+            \tex_let:D #3 \scan_stop:
+            \cs_set:Npn #3 #4 {#5}
+          }
+        \cs_new:Npn #3 #4 {#5}
       }
   }
   { \cs_set_protected:Npn \__kernel_patch_deprecation:nnNNpn #1#2 { } }
