--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -1570,19 +1570,32 @@
 % \begin{macro}[deprecated = 2019-12-31]{\@@_map_break:Nn}
 % \begin{macro}[deprecated = 2019-12-31]{\@@_break:}
 % \begin{macro}[deprecated = 2019-12-31]{\@@_break:n}
-%   Made public, but used by a few third-parties.
+%   Made public, but used by a few third-parties.  It's not possible to
+%   perfectly support a mixture of \cs{@@_map_break:Nn} and
+%   \cs{prg_map_break:Nn} because they use different delimiters.  The
+%   following code only breaks if someone tries to break from two
+%   \enquote{old-style} \cs{@@_map_break:Nn} \ldots{}
+%   \cs{@@_break_point:Nn} mappings in one go.  Basically, the
+%   \cs{@@_map_break:Nn} converts a single \cs{@@_break_point:Nn} to
+%   \cs{prg_break_point:Nn}, and that delimiter had better be the right
+%   one.  Then we call \cs{prg_map_break:Nn} which may end up breaking
+%   intermediate looks in the (unbraced) argument |#1|.  It is essential
+%   to define the |break_point| functions before the corresponding
+%   |break| functions: otherwise \cs{debug_on:n} |{deprecation}|
+%   \cs{debug_off:n} |{deprecation}| would break when trying to restore
+%   the definitions because they would involve deprecated commands whose
+%   definition has not yet been restored.
 %    \begin{macrocode}
-\cs_new_eq:NN \@@_break_point:Nn \prg_break_point:Nn
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \prg_break_point:Nn }
+\cs_new:Npn \@@_break_point:Nn { \prg_break_point:Nn }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \prg_break_point: }
 \cs_new:Npn \@@_break_point: { \prg_break_point: }
-\cs_new:Npn \@@_map_break:Nn #1#2#3 \@@_break_point:Nn #4#5
-  {
-    #5
-    \if_meaning:w #1 #4
-      \exp_after:wN \use_iii:nnn
-    \fi:
-    \@@_map_break:Nn #1 {#2}
-  }
-\cs_new:Npn \@@_break: { \prg_break: }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \prg_map_break:Nn }
+\cs_new:Npn \@@_map_break:Nn #1 \@@_break_point:Nn
+  { \prg_map_break:Nn #1 \prg_break_point:Nn }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \prg_break: }
+\cs_new:Npn \@@_break: #1 \@@_break_point: { }
+\__kernel_patch_deprecation:nnNNpn { 2019-12-31 } { \prg_break:n }
 \cs_new:Npn \@@_break:n #1#2 \@@_break_point: {#1}
 %    \end{macrocode}
 % \end{macro}
