--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -938,7 +938,7 @@
     \int_value:w
       \__int_dim_eval:w
         #2 \__int_dim_eval:w \int_eval:n {#1} sp \scan_stop:
-        \__int_dim_eval:w
+        \scan_stop:
   }
 \cs_new_eq:NN \__int_dim_eval:w \etex_dimexpr:D
 %    \end{macrocode}
