Document that \scan_stop: is removed by \int_eval:w.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -98,9 +98,9 @@
 %   \end{syntax}
 %   Evaluates the \meta{integer expression} as described for
 %   \cs{int_eval:n}. The end of the expression is the first token
-%   encountered that cannot form part of such an expression. In particular,
-%   spaces do \emph{not} terminate the expression but \cs{scan_stop}:
-%   does.
+%   encountered that cannot form part of such an expression.
+%   If that token is \cs{scan_stop:} it is removed, otherwise not.
+%   Spaces do \emph{not} terminate the expression.
 % \end{function}
 %
 % \begin{function}[EXP, updated = 2012-09-26]{\int_abs:n}
