--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -80,30 +80,26 @@
 %   Contrarily to \cs{seq_count:N} this is performed in constant time.
 % \end{function}
 %
-% \begin{function}{\intarray_gset:Nnn, \intarray_gset_fast:Nnn}
+% \begin{function}{\intarray_gset:Nnn}
 %   \begin{syntax}
 %     \cs{intarray_gset:Nnn} \meta{intarray~var} \Arg{position} \Arg{value}
-%     \cs{intarray_gset_fast:Nnn} \meta{intarray~var} \Arg{position} \Arg{value}
 %   \end{syntax}
 %   Stores the result of evaluating the integer expression \meta{value}
 %   into the \meta{integer array variable} at the (integer expression)
-%   \meta{position}.  While \cs{intarray_gset:Nnn} checks that the
-%   \meta{position} is between $1$ and the \cs{intarray_count:N} and that
-%   the \meta{value}'s absolute value is at most $2^{30}-1$, the
-%   \enquote{fast} function performs no such bound check.
-%   Assignments are always global.
+%   \meta{position}.  If the \meta{position} is not between $1$ and the
+%   \cs{intarray_count:N}, or the \meta{value}'s absolute value is
+%   bigger than $2^{30}-1$, an error occurs.  Assignments are always
+%   global.
 % \end{function}
 %
-% \begin{function}[EXP]{\intarray_item:Nn, \intarray_item_fast:Nn}
+% \begin{function}[EXP]{\intarray_item:Nn}
 %   \begin{syntax}
 %     \cs{intarray_item:Nn} \meta{intarray~var} \Arg{position}
-%     \cs{intarray_item_fast:Nn} \meta{intarray~var} \Arg{position}
 %   \end{syntax}
 %   Expands to the integer entry stored at the (integer expression)
-%   \meta{position} in the \meta{integer array variable}.  While
-%   \cs{intarray_item:Nn} checks that the \meta{position} is between $1$
-%   and the \cs{intarray_count:N}, the \enquote{fast} function performs
-%   no such bound check.
+%   \meta{position} in the \meta{integer array variable}.  If the
+%   \meta{position} is not between $1$ and the \cs{intarray_count:N}, an
+%   error occurs.
 % \end{function}
 %
 % \subsection{Implementation notes}
@@ -184,13 +180,16 @@
 %
 % \subsection{Array items}
 %
-% \begin{macro}{\intarray_gset:Nnn, \intarray_gset_fast:Nnn}
+% \begin{macro}{\intarray_gset:Nnn, \__kernel_intarray_gset:Nnn}
 % \begin{macro}{\@@_gset:Nnn}
-%   Set the appropriate \tn{fontdimen}.  The slow version checks the
-%   position and value are within bounds.
+%   Set the appropriate \tn{fontdimen}.  The
+%   \cs{__kernel_intarray_gset:Nnn} function does not use
+%   \cs{int_eval:n}, namely its arguments must be suitable for
+%   \cs{int_value:w}.  The user version checks the position and value
+%   are within bounds.
 %    \begin{macrocode}
-\cs_new_protected:Npn \intarray_gset_fast:Nnn #1#2#3
-  { \tex_fontdimen:D \int_eval:n {#2} #1 = \int_eval:n {#3} \c_@@_sp_dim }
+\cs_new_protected:Npn \__kernel_intarray_gset:Nnn #1#2#3
+  { \tex_fontdimen:D #2 #1 #3 \c_@@_sp_dim }
 \cs_new_protected:Npn \intarray_gset:Nnn #1#2#3
   {
     \exp_args:Nff \@@_gset:Nnn #1
@@ -205,10 +204,10 @@
             \__kernel_msg_error:nnxxxx { kernel } { overflow }
               { \token_to_str:N #1 } {#2} {#3}
               { \int_compare:nNnT {#3} < 0 { - } \int_value:w \c_max_dim }
-            \intarray_gset_fast:Nnn #1 {#2}
-              { \int_compare:nNnT {#3} < 0 { - } \c_max_dim }
+            \__kernel_intarray_gset:Nnn #1 {#2}
+              { \int_value:w \int_compare:nNnT {#3} < 0 { - } \c_max_dim }
           }
-          { \intarray_gset_fast:Nnn #1 {#2} {#3} }
+          { \__kernel_intarray_gset:Nnn #1 {#2} {#3} }
       }
       {
         \__kernel_msg_error:nnxxx { kernel } { out-of-bounds }
@@ -219,18 +218,21 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\intarray_item:Nn, \intarray_item_fast:Nn}
+% \begin{macro}[EXP]{\intarray_item:Nn, \__kernel_intarray_item:Nn}
 % \begin{macro}{\@@_item:Nn}
-%   Get the appropriate \tn{fontdimen} and perform bound checks if requested.
+%   Get the appropriate \tn{fontdimen} and perform bound checks.  The
+%   \cs{__kernel_intarray_item:Nn} function omits bound checks and omits
+%   \cs{int_eval:n}, namely its argument must be a \TeX{} integer
+%   suitable for \cs{int_value:w}.
 %    \begin{macrocode}
-\cs_new:Npn \intarray_item_fast:Nn #1#2
-  { \int_eval:n { \tex_fontdimen:D \int_eval:n {#2} #1 } }
+\cs_new:Npn \__kernel_intarray_item:Nn #1#2
+  { \int_value:w \tex_fontdimen:D #2 #1 }
 \cs_new:Npn \intarray_item:Nn #1#2
   { \exp_args:Nf \@@_item:Nn #1 { \int_eval:n {#2} } }
 \cs_new:Npn \@@_item:Nn #1#2
   {
     \int_compare:nTF { 1 <= #2 <= \intarray_count:N #1 }
-      { \intarray_item_fast:Nn #1 {#2} }
+      { \__kernel_intarray_item:Nn #1 {#2} }
       {
         \__kernel_msg_expandable_error:nnnnn { kernel } { out-of-bounds }
           { \token_to_str:N #1 } {#2} { \intarray_count:N #1 }
