Use @@=str when loading Unicode case data
Cuts down a few warnings.

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1987,10 +1987,6 @@
 %
 % \subsection{Unicode data for case changing}
 %
-%    \begin{macrocode}
-%<@@=unicode>
-%    \end{macrocode}
-%
 % Case changing both for strings and \enquote{text} requires data from
 % the Unicode Consortium. Some of this is build in to the format (as
 % \tn{lccode} and \tn{uccode} values) but this covers only the simple
@@ -2036,6 +2032,7 @@
 % scheme works fine. With no I/O loop available, hard-code one that works
 % quickly.
 %    \begin{macrocode}
+      \cs_set_nopar:Npn \l_@@_tmp_tl { }
       \cs_set_protected:Npn \@@_map_inline:n #1
         {
           \group_begin:
@@ -2114,7 +2111,7 @@
               \if_int_compare:w \tex_lccode:D "#1 = "#3 \scan_stop:
               \else:
                 \str_const:cx
-                  { c__str_fold_case_ \utex_char:D "#1 _str }
+                  { c_@@_fold_case_ \utex_char:D "#1 _str }
                   { \utex_char:D "#3 ~ }
               \fi:
             }
@@ -2127,7 +2124,7 @@
         { \@@_store:nnnnn {#1} { fold } {#2} {#3} {#4} }
       \cs_set_protected:Npn \@@_store:nnnnn #1#2#3#4#5
         {
-          \str_const:cx { c__str_fold_case_ \utex_char:D "#1 _str }
+          \str_const:cx { c_@@_fold_case_ \utex_char:D "#1 _str }
             {
               \utex_char:D "#3 ~
               \utex_char:D "#4 ~
@@ -2164,7 +2161,7 @@
             }
           \str_if_eq:nnF {#2} { mixed }
             {
-              \str_const:cx { c__str_ #2 _case_ \utex_char:D "#1 _str }
+              \str_const:cx { c_@@_ #2 _case_ \utex_char:D "#1 _str }
                 { \tl_use:c { c__tl_ #2 _case_ \utex_char:D "#1 _tl } }
             }
         }
@@ -2183,9 +2180,9 @@
           \if_meaning:w \q_recursion_tail #2
             \exp_after:wN \use_none_delimit_by_q_recursion_stop:w
           \fi:
-          \str_const:cn { c__str_fold_case_  #1 _str } {#2}
-          \str_const:cn { c__str_lower_case_ #1 _str } {#2}
-          \str_const:cn { c__str_upper_case_ #2 _str } {#1}
+          \str_const:cn { c_@@_fold_case_  #1 _str } {#2}
+          \str_const:cn { c_@@_lower_case_ #1 _str } {#2}
+          \str_const:cn { c_@@_upper_case_ #2 _str } {#1}
           \tl_const:cn { c__tl_lower_case_ #1 _tl } {#2}
           \tl_const:cn { c__tl_upper_case_ #2 _tl } {#1}
           \@@_tmp:NN
