--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1886,10 +1886,10 @@
   {
     \quark_if_recursion_tail_stop_do:Nn #2
       { \@@_change_case_end:wn }
-    \cs_if_exist:cTF { c__str_ #1 _case_ #2 _str }
+    \cs_if_exist:cTF { c_@@_ #1 _case_ #2 _str }
       {
         \@@_change_case_output:fw
-          { \str_use:c { c__str_ #1 _case_ #2 _str } }
+          { \str_use:c { c_@@_ #1 _case_ #2 _str } }
       }
       { \@@_change_case_char_aux:nN {#1} #2 }
     \@@_change_case_loop:nw {#1}
@@ -1904,11 +1904,11 @@
   {
     \cs_new:Npn \@@_change_case_char_aux:nN #1#2
       {
-        \int_compare:nNnTF { \use:c { __str_lookup_ #1 :N } #2 } = { 0 }
+        \int_compare:nNnTF { \use:c { @@_lookup_ #1 :N } #2 } = { 0 }
           { \@@_change_case_output:nw {#2} }
           {
             \@@_change_case_output:fw
-              { \utex_char:D \use:c { __str_lookup_ #1 :N } #2 ~ }
+              { \utex_char:D \use:c { @@_lookup_ #1 :N } #2 ~ }
           }
       }
     \cs_new_protected:Npn \@@_lookup_lower:N #1 { \tex_lccode:D `#1 }
