Make scan marks public

--- a/l3kernel/l3fp-expo.dtx
+++ b/l3kernel/l3fp-expo.dtx
@@ -698,7 +698,7 @@
     ; #2#3#4 0000 0000 ;
   }
 \cs_new:Npn \@@_exp_Taylor_ii:ww #1; #2;
-  { \@@_exp_Taylor_loop:www 10 ; #1 ; #1 ; \s__stop }
+  { \@@_exp_Taylor_loop:www 10 ; #1 ; #1 ; \s_stop }
 \cs_new:Npn \@@_exp_Taylor_loop:www #1; #2; #3;
   {
     \if_int_compare:w #1 = 1 \exp_stop_f:
@@ -713,7 +713,7 @@
       #2 ;
     }
   }
-\cs_new:Npn \@@_exp_Taylor_break:Nww #1 #2; #3 \s__stop
+\cs_new:Npn \@@_exp_Taylor_break:Nww #1 #2; #3 \s_stop
   { \@@_fixed_add_one:wN #2 ; }
 %    \end{macrocode}
 % \end{macro}
