--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -832,7 +832,7 @@
 %   \texttt{prepare_end} auxiliary finds the prepared token list
 %   as~|#4|.  The scene is then set up for \cs{@@_quick_split:NnNn},
 %   which sorts the prepared list and perform the post action placed
-%   after \cs{q_mark}, namely removing the trailing \cs{s__stop} and
+%   after \cs{q_mark}, namely removing the trailing \cs{s_stop} and
 %   \cs{q_stop} and leaving \cs{exp_stop_f:} to stop
 %   \texttt{f}-expansion.
 %    \begin{macrocode}
@@ -858,9 +858,9 @@
   {
     \@@_quick_split:NnNn #4 \@@_quick_end:nnTFNn { }
     \q_mark { \@@_quick_cleanup:w \exp_stop_f: }
-    \s__stop \q_stop
+    \s_stop \q_stop
   }
-\cs_new:Npn \@@_quick_cleanup:w #1 \s__stop \q_stop {#1}
+\cs_new:Npn \@@_quick_cleanup:w #1 \s_stop \q_stop {#1}
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
