--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -658,14 +658,6 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\@@_scan_new:N}
-%   A poor man's version of the kernel's \cs{__scan_new:N}.
-%    \begin{macrocode}
-\cs_new_protected:Npn \@@_scan_new:N #1
-  { \cs_new_eq:NN #1 \scan_stop: }
-%    \end{macrocode}
-% \end{macro}
-%
 % \begin{macro}{\@@_int_value:w, \@@_int_eval:w, \@@_int_eval_end:}
 %   Copies of \TeX{}'s and \eTeX{}'s \tn{number} and \tn{numexpr}
 %   primitives, used for calculations.
@@ -687,7 +679,7 @@
 %   However, when typeset, \cs{s_@@} does nothing, and \cs{@@_chk:w} is
 %   defined to produce an error.
 %    \begin{macrocode}
-\@@_scan_new:N \s_@@
+\scan_new:N \s_@@
 \cs_new_protected:Npn \@@_chk:w #1 ;
   {
     \msg_error:nnx { bigint } { misused-var }
@@ -711,8 +703,8 @@
 % \begin{macro}{\s_@@_mark, \s_@@_stop}
 %   Unexpandable markers for the end of a big integer expression.
 %    \begin{macrocode}
-\@@_scan_new:N \s_@@_mark
-\@@_scan_new:N \s_@@_stop
+\scan_new:N \s_@@_mark
+\scan_new:N \s_@@_stop
 %    \end{macrocode}
 % \end{macro}
 %
