--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -144,7 +144,7 @@
 % \begin{variable}[int]{\s_@@_symbolic}
 %   Scan mark indicating the start of a symbolic expression.
 %    \begin{macrocode}
-\__scan_new:N \s_@@_symbolic
+\scan_new:N \s_@@_symbolic
 %    \end{macrocode}
 % \end{variable}
 %
