--- a/l3trial/l3fp-extras/l3fp-types.dtx
+++ b/l3trial/l3fp-extras/l3fp-types.dtx
@@ -263,7 +263,7 @@
 %   Marks the start of some \texttt{N}-type tokens stored as a
 %   floating-point object.
 %    \begin{macrocode}
-\__scan_new:N \s_@@_tokens
+\scan_new:N \s_@@_tokens
 %    \end{macrocode}
 % \end{variable}
 %
