--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -2295,7 +2295,7 @@
 %   big-endianness. The three endianness cases are based on a common
 %   auxiliary whose first argument is $1$ for big-endian and $2$ for
 %   little-endian, and whose second argument, delimited by the scan mark
-%   \cs{s__stop}, is expanded once (the string may be long; passing
+%   \cs{s_stop}, is expanded once (the string may be long; passing
 %   \cs{g_@@_result_tl} as an argument before expansion is cheaper).
 %
 %   The \cs{@@_decode_utf_xvi:Nw} function defines \cs{@@_tmp:w} to
@@ -2305,13 +2305,13 @@
 %   \cs{@@_decode_utf_xvi_pair:NN} described below.
 %    \begin{macrocode}
   \cs_new_protected:cpn { @@_convert_decode_utf16be: }
-    { \@@_decode_utf_xvi:Nw 1 \g_@@_result_tl \s__stop }
+    { \@@_decode_utf_xvi:Nw 1 \g_@@_result_tl \s_stop }
   \cs_new_protected:cpn { @@_convert_decode_utf16le: }
-    { \@@_decode_utf_xvi:Nw 2 \g_@@_result_tl \s__stop }
+    { \@@_decode_utf_xvi:Nw 2 \g_@@_result_tl \s_stop }
   \cs_new_protected:cpn { @@_convert_decode_utf16: }
     {
       \exp_after:wN \@@_decode_utf_xvi_bom:NN
-        \g_@@_result_tl \s__stop \s__stop \s__stop
+        \g_@@_result_tl \s_stop \s_stop \s_stop
     }
   \cs_new_protected:Npn \@@_decode_utf_xvi_bom:NN #1#2
     {
@@ -2323,7 +2323,7 @@
             { \@@_decode_utf_xvi:Nw 1 #1#2 }
         }
     }
-  \cs_new_protected:Npn \@@_decode_utf_xvi:Nw #1#2 \s__stop
+  \cs_new_protected:Npn \@@_decode_utf_xvi:Nw #1#2 \s_stop
     {
       \flag_clear:n { str_error }
       \flag_clear:n { str_missing }
@@ -2572,7 +2572,7 @@
 %
 %   The structure is similar to \textsc{utf-16} decoding functions. If
 %   the endianness is not given, test the first $4$ bytes of the string
-%   (possibly \cs{s__stop} if the string is too short) for the presence
+%   (possibly \cs{s_stop} if the string is too short) for the presence
 %   of a byte-order mark. If there is a byte-order mark, use that
 %   endianness, and remove the $4$ bytes, otherwise default to
 %   big-endian, and leave the $4$ bytes in place. The
@@ -2584,22 +2584,22 @@
 %   inside an \texttt{x}-expanding assignment to \cs{g_@@_result_tl}.
 %
 %   The \texttt{_loop} auxiliary first checks for the end-of-string
-%   marker \cs{s__stop}, calling the \texttt{_end} auxiliary if
+%   marker \cs{s_stop}, calling the \texttt{_end} auxiliary if
 %   appropriate. Otherwise, leave the \meta{4~bytes} \cs{s__tl} behind,
 %   then check that the code point is not overflowing: the leading byte
 %   must be $0$, and the following byte at most $16$.
 %
 %   In the ending code, we check that there remains no byte: there
-%   should be nothing left until the first \cs{s__stop}. Break the map.
+%   should be nothing left until the first \cs{s_stop}. Break the map.
 %    \begin{macrocode}
   \cs_new_protected:cpn { @@_convert_decode_utf32be: }
-    { \@@_decode_utf_xxxii:Nw 1 \g_@@_result_tl \s__stop }
+    { \@@_decode_utf_xxxii:Nw 1 \g_@@_result_tl \s_stop }
   \cs_new_protected:cpn { @@_convert_decode_utf32le: }
-    { \@@_decode_utf_xxxii:Nw 2 \g_@@_result_tl \s__stop }
+    { \@@_decode_utf_xxxii:Nw 2 \g_@@_result_tl \s_stop }
   \cs_new_protected:cpn { @@_convert_decode_utf32: }
     {
       \exp_after:wN \@@_decode_utf_xxxii_bom:NNNN \g_@@_result_tl
-        \s__stop \s__stop \s__stop \s__stop \s__stop
+        \s_stop \s_stop \s_stop \s_stop \s_stop
     }
   \cs_new_protected:Npn \@@_decode_utf_xxxii_bom:NNNN #1#2#3#4
     {
@@ -2611,7 +2611,7 @@
             { \@@_decode_utf_xxxii:Nw 1 #1#2#3#4 }
         }
     }
-  \cs_new_protected:Npn \@@_decode_utf_xxxii:Nw #1#2 \s__stop
+  \cs_new_protected:Npn \@@_decode_utf_xxxii:Nw #1#2 \s_stop
     {
       \flag_clear:n { str_overflow }
       \flag_clear:n { str_end }
@@ -2620,14 +2620,14 @@
       \tl_gset:Nx \g_@@_result_tl
         {
           \exp_after:wN \@@_decode_utf_xxxii_loop:NNNN
-            #2 \s__stop \s__stop \s__stop \s__stop
+            #2 \s_stop \s_stop \s_stop \s_stop
           \prg_break_point:
         }
       \@@_if_flag_error:nnx { str_error } { utf32-decode } { }
     }
   \cs_new:Npn \@@_decode_utf_xxxii_loop:NNNN #1#2#3#4
     {
-      \if_meaning:w \s__stop #4
+      \if_meaning:w \s_stop #4
         \exp_after:wN \@@_decode_utf_xxxii_end:w
       \fi:
       #1#2#3#4 \s__tl
@@ -2648,7 +2648,7 @@
       \s__tl
       \@@_decode_utf_xxxii_loop:NNNN
     }
-  \cs_new:Npn \@@_decode_utf_xxxii_end:w #1 \s__stop
+  \cs_new:Npn \@@_decode_utf_xxxii_end:w #1 \s_stop
     {
       \tl_if_empty:nF {#1}
         {
