--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -109,11 +109,11 @@
 \cs_new:Npn \@@_trim_zeros:w #1 ;
   {
     \@@_trim_zeros_loop:w #1
-      ; \@@_trim_zeros_loop:w 0; \@@_trim_zeros_dot:w .; \s__stop
+      ; \@@_trim_zeros_loop:w 0; \@@_trim_zeros_dot:w .; \s_stop
   }
 \cs_new:Npn \@@_trim_zeros_loop:w #1 0; #2 { #2 #1 ; #2 }
 \cs_new:Npn \@@_trim_zeros_dot:w #1 .; { \@@_trim_zeros_end:w #1 ; }
-\cs_new:Npn \@@_trim_zeros_end:w #1 ; #2 \s__stop { #1 }
+\cs_new:Npn \@@_trim_zeros_end:w #1 ; #2 \s_stop { #1 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
