--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -1018,7 +1018,7 @@
 %
 % \begin{macro}[EXP]{\@@_if_digit:NTF}
 %   Here we expect |#1| to be a character with category other, or
-%   \cs{s__stop}.
+%   \cs{s_stop}.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_if_digit:N #1 { TF }
   {
@@ -1030,9 +1030,9 @@
 %
 % \begin{macro}[EXP]
 %   {\@@_put:nw, \@@_put:ow, \@@_put:fw}
-%   Put |#1| after an \cs{s__stop} delimiter.
+%   Put |#1| after an \cs{s_stop} delimiter.
 %    \begin{macrocode}
-\cs_new:Npn \@@_put:nw #1 #2 \s__stop { #2 \s__stop #1 }
+\cs_new:Npn \@@_put:nw #1 #2 \s_stop { #2 \s_stop #1 }
 \cs_generate_variant:Nn \@@_put:nw { o , f }
 %    \end{macrocode}
 % \end{macro}
@@ -1083,7 +1083,7 @@
 \cs_new:Npn \@@_python:n #1
   {
     \exp_last_unbraced:Nf \@@_python_auxi:NN
-      \__str_to_other:n {#1} \s__stop \s__stop {#1}
+      \__str_to_other:n {#1} \s_stop \s_stop {#1}
   }
 \cs_new:Npx \@@_python_auxi:NN #1#2
   {
@@ -1128,11 +1128,11 @@
   }
 \cs_new:Npn \@@_python_auxvii:nN #1#2
   {
-    \token_if_eq_meaning:NNTF \s__stop #2
+    \token_if_eq_meaning:NNTF \s_stop #2
       { \@@_python_end:nwn { #1 ? } #2 }
       { \@@_python_end:nwn { #1 #2 } }
   }
-\cs_new:Npn \@@_python_end:nwn #1 #2 \s__stop \s__stop #3
+\cs_new:Npn \@@_python_end:nwn #1 #2 \s_stop \s_stop #3
   {
     \tl_if_empty:nF {#2}
       { \__kernel_msg_expandable_error:nnn { str } { invalid-format } {#3} }
@@ -1169,9 +1169,9 @@
 %   \end{quote}
 %   First check that the \meta{alignment} is not |=|, and set the
 %   default alignment |?| to |<|.  Place the modified information after
-%   a trailing \cs{s__stop} for later retrieval.  Then check that there
+%   a trailing \cs{s_stop} for later retrieval.  Then check that there
 %   was no \meta{sign}.  The width will be useful later, store it after
-%   \cs{s__stop}.  Afterwards, store the precision, and the function
+%   \cs{s_stop}.  Afterwards, store the precision, and the function
 %   \cs{__str_range_unsafe:nnn} that will be used to extract the first
 %   |#5| characters of the string.
 %   There is a need to use the \enquote{unsafe} function, as otherwise
@@ -1209,14 +1209,14 @@
           }
       }
     \@@_tl_s:NNnnNNn
-    \s__stop
+    \s_stop
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_tl_s:NNnnNNn}
 %   \begin{quote}
-%     \cs{@@_tl_s:NNnnNNn} \cs{s__stop} \meta{function}
+%     \cs{@@_tl_s:NNnnNNn} \cs{s_stop} \meta{function}
 %     \Arg{arguments} \Arg{width} \meta{fill} \meta{alignment}
 %     \Arg{token list}
 %   \end{quote}
@@ -1331,12 +1331,12 @@
 %   \end{quote}
 %   First set the
 %   default alignment |?| to |>|.  Place the modified information after
-%   a trailing \cs{s__stop} for later retrieval.  Then check the
+%   a trailing \cs{s_stop} for later retrieval.  Then check the
 %   \meta{sign}: if the integer is negative, always put~|-|.  Otherwise,
 %   if the format's \meta{sign} is |~|, put a space (with category
 %   \enquote{other}); if it is~|+| put |+|; if it is |-| (default), put
 %   nothing, represented as a brace group.  The width |#4| will be
-%   useful later, store it after \cs{s__stop}.  Afterwards, check that
+%   useful later, store it after \cs{s_stop}.  Afterwards, check that
 %   the \meta{precision} was absent.  Finally, dispatch depending on the
 %   \meta{style}.
 %    \begin{macrocode}
@@ -1374,14 +1374,14 @@
           { str } { invalid-style-format } {#6} { int }
         \@@_int:NwnnNNn \use:n
       }
-    \s__stop {#7}
+    \s_stop {#7}
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_int:NwnnNNn}
 %   \begin{quote}
-%     \cs{@@_int:NwnnNNn} \meta{function} \cs{s__stop}
+%     \cs{@@_int:NwnnNNn} \meta{function} \cs{s_stop}
 %     \Arg{width} \Arg{sign} \meta{fill} \meta{alignment} \Arg{integer}
 %   \end{quote}
 %   Use the |format_align| function corresponding to the
@@ -1394,7 +1394,7 @@
 %     \item the \meta{fill} character.
 %   \end{itemize}
 %    \begin{macrocode}
-\cs_new:Npn \@@_int:NwnnNNn #1#2 \s__stop #3#4#5#6#7
+\cs_new:Npn \@@_int:NwnnNNn #1#2 \s_stop #3#4#5#6#7
   {
     \exp_args:Nc \exp_args:Nf
       { @@_align_#6:nnnN }
